My ovn bgp agent deployment for cloud interconnect

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,14 @@
 [defaults]
+action_plugins = /usr/lib/python3/dist-packages/ara/plugins/action
+callback_plugins = /usr/lib/python3/dist-packages/ara/plugins/callback
 host_key_checking = False
 stdout_callback = yaml
 ansible_ssh_common_args='-o IdentitiesOnly=yes'
 ansible_timeout = 3600
 [ssh_connection]
 ssh_args = -F ssh_config
+
+[ara]
+api_server = http://127.0.0.1:8080
+api_client = http
+callback_whitelist = ara
